Fix: Font size to prevent zoom on mobile (#175)

--- a/scss/includes/_teamshares.scss
+++ b/scss/includes/_teamshares.scss
@@ -392,7 +392,7 @@ ul a {
     border-radius: 0.375rem;
     border-style: solid;
     border-width: 1px;
-    font-size: 0.8125rem;
+    font-size: 1rem;
     height: 2.25rem;
     line-height: 2rem;
     padding: 0 0.75rem;
